--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0'
+    classpath 'com.android.tools.build:gradle:3.1.4'
   }
 }
 
@@ -15,10 +15,9 @@ apply plugin: 'com.android.library'
 
 android {
   compileSdkVersion 26
-    buildToolsVersion "26.0.2"
 
   defaultConfig {
-    minSdkVersion 16
+    minSdkVersion 18
     targetSdkVersion 26
     versionCode 1
     versionName "1.0.0"
@@ -35,6 +34,10 @@ repositories {
    url 'https://maven.google.com'
   }
   maven { url "https://jitpack.io" }
+  maven { url 'https://maven.google.com' }
+  maven { url "https://jitpack.io" }
+  maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+  jcenter()
   flatDir {
     dirs 'libs' //this way we can find the .aar file in libs folder
   }
@@ -42,12 +45,12 @@ repositories {
 
 
 dependencies {
-  compile 'com.facebook.react:react-native:+'
-  compile "com.google.zxing:core:3.2.1"
-  compile "com.drewnoakes:metadata-extractor:2.9.1"
+  implementation 'com.facebook.react:react-native:+'
+  implementation "com.google.zxing:core:3.2.1"
+  implementation "com.drewnoakes:metadata-extractor:2.9.1"
   //noinspection GradleCompatible
-  compile "com.android.support:exifinterface:+"
-  compile 'com.github.react-native-community:cameraview:cc47bb28ed2fc54a8c56a4ce9ce53edd1f0af3a5'
+  implementation "com.android.support:exifinterface:+"
+  implementation 'com.github.react-native-community:cameraview:cc47bb28ed2fc54a8c56a4ce9ce53edd1f0af3a5'
   implementation 'com.google.android.gms:play-services:11.0.4'
   implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
   implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
